Attempt fix image height on mobile

--- a/css/effects/set2.css
+++ b/css/effects/set2.css
@@ -42,7 +42,7 @@
 
 	display: block;
 
-	min-height: 100%;
+/*	min-height: 100%;*/
 
 	max-width: 100%;
 
